--- a/KNN_Base.ipynb
+++ b/KNN_Base.ipynb
@@ -344,7 +344,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 320
+          "height": 300
         },
         "id": "oPXy7zePjrWd",
         "outputId": "78794203-7b98-4ff0-d55b-ca967148ac1d"
@@ -725,13 +725,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.metrics import f1_score\n",
+        "f1_scores_knn=cross_val_score(knn, X_scaled, Y, cv=cv, scoring=\"f1\")"
+      ],
       "metadata": {
         "id": "KT71AxO6nsBk"
       },
       "id": "KT71AxO6nsBk",
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"F1 de cada bloque\", f1_scores_knn)\n",
+        "print(\"F1 promedio\", f1_scores_knn.mean())\n",
+        "print(\"F1 desviacion\", f1_scores_knn.std())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R1nnlUvBoB2-",
+        "outputId": "261a2f77-6c49-4a7f-b0c4-dccb3b3d32df"
+      },
+      "id": "R1nnlUvBoB2-",
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "F1 de cada bloque [0.92622951 0.9382716  0.93877551 0.93723849 0.92307692]\n",
+            "F1 promedio 0.9327184080279695\n",
+            "F1 desviacion 0.006678648223641893\n"
+          ]
+        }
+      ]
     }
   ]
 }
